Don't run Ant with security manager
This seems to cause issues on more recent JDK and Ant versions than what is currently in use on Jenkins (11.0.19 and 1.10.13 respectively)

Signed-off-by: Andrew James Pielage <andrew.pielage@azul.com>